<resources>
    <string name="app_name">RefreshNews</string>
    <!--Tab name-->
    <string-array name="tab_name_array">
        <item>Country</item>
        <item>Business</item>
        <item>Technology</item>
        <item>Entertainment</item>
        <item>Sports</item>
        <item>Science</item>
        <item>Health</item>
        <item>General</item>
    </string-array>
    <!--Network error -->
    <string name="retry">Retry</string>
    <string name="server_error">Server is taking more time to respond, Please try again</string>
    <string name="netwrokr_error">No internet connection!</string>
    <string name="ok">Okay</string>
    <string name="cancel">Cancel</string>

   <!--News list fragment-->
    <string name="btn_full_coverage">Full Coverage of this story</string>
    <string name="appbar_full_title">Full Coverage</string>
    <string name="appbar_headline">Headline</string>

    <!--BottomBar-->
    <string name="about_us">About Us</string>
    <string name="help">Help</string>
    <string name="library">Library</string>

    <!--Sources-->
    <string name="btn_sources_protal">News Portal</string>
    <string name="btn_sources_protal_list">News Library</string>

    <!--About us-->
    <string name="about_us_title">About Refresh News - only real</string>
    <string name="about_us_content">In this fast moving world where people find little time to spend with their own family, it is difficult to find time to read newspaper and stay updated with the current affairs. Reading newspaper might sometimes be time taking considering the size of the article. Sometimes people give the article an skip due to lethargy if it is too long. Information through listening and visuals is quickly perceived compared to reading. To make things easier, the Refresh News - only real can be used to scan the headlines from the newspaper and fetch relevant news from the world wide web</string>
    <string name="about_us_version">This is first version of app  and its is in English Language.</string>
    <string name="about_us_contact_us_tag">Contact Us</string>
    <string name="about_us_contact">Ragini\n
Roll: 1807340, Branch: EEE, Section:EEE5\n
Kalinga Institute of Industrial Technology</string>
    <!--Help up-->
    <string name="help_us_title">Help Center</string>
    <string name="help_us_view_headlines">View Headlines</string>
    <string name="help_us_headlines_category">Headline of news can be viewed using below categories\n1. Country\n2.Busienss\n3.Technology\n4.Entertainment\n5.Sports\n6.Science\n7.Health\n8.General</string>

    <string name="help_us_view_sources_title">View News Agencies</string>
    <string name="help_us_view_sources">We can track news Sources By clicking on Library\nNews Sources list we can see and its details.</string>
    <string name="help_us_search_title">Search News</string>
    <string name="help_us_view_search">We can search news by entering keyworad and Application will give search result till last one month old data.</string>
    <string name="help_us_login_title">Login to Application</string>
    <string name="help_us_login">This app can be used without login and by login using Phone number</string>


</resources>