<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/margin_10"
    android:background="@color/white"
    android:orientation="vertical"


   >
    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/img_logo"

 android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/news_logo_red_white"
        android:layout_gravity="center"
        android:background="@color/white"
        />
    <com.kiit.eee.ragini.refreshnews.activities.views.CustomTextView
        android:id="@+id/txt_abt_us_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/secondary"
        android:textSize="@dimen/font_22"
        android:textStyle="bold"
        android:text="@string/about_us_title"
        app:typeface="sf_medium"
        android:layout_gravity="left"
        android:gravity="left"/>

    <com.kiit.eee.ragini.refreshnews.activities.views.CustomTextView
        android:id="@+id/txt_abt_us_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_15"
        android:textColor="@android:color/black"
        android:textSize="@dimen/font_15"
        android:textStyle="bold"
        android:typeface="normal"
        app:typeface="sf_regular"
        android:text="@string/about_us_content"/>

    <com.kiit.eee.ragini.refreshnews.activities.views.CustomTextView
        android:id="@+id/txt_abt_us_version"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_10"
        android:textSize="@dimen/font_20"
        app:typeface="sf_medium"
        android:textStyle="bold"
        android:text="@string/about_us_version"/>

    <com.kiit.eee.ragini.refreshnews.activities.views.CustomTextView
        android:id="@+id/txt_about_contact_us_tag"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:layout_marginTop="@dimen/margin_20"
        android:gravity="left"
        android:text="@string/about_us_contact_us_tag"
        android:textAllCaps="false"
        android:textColor="@color/secondary"
        android:textSize="@dimen/font_15"
        android:textStyle="bold"
        app:typeface="sf_medium"
        />

    <com.kiit.eee.ragini.refreshnews.activities.views.CustomTextView
        android:id="@+id/txt_about_contact_us"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:layout_marginTop="@dimen/margin_20"
        android:gravity="left"
        android:text="@string/about_us_contact"
        android:textAllCaps="false"
        android:textColor="@android:color/black"
        android:textSize="@dimen/font_15"
        android:textStyle="bold"
        app:typeface="sf_medium"
        />
    <androidx.appcompat.widget.AppCompatImageButton
        android:layout_marginTop="@dimen/margin_10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/kiit_logo"
        android:layout_gravity="left"
        android:foregroundGravity="left"
        android:background="@color/white"
        />
</LinearLayout>

